# philosopher

./: .gitignore  .gitmodules  CMakeLists.txt  main.c  tester.bash
include/: defines.h  do.h  output.h  philo.h
philo/: CMakeLists.txt  Makefile  main.c  philo  test.sh  test_die.sh
philo/include/: defines.h  ft_ctype.h  ft_stdlib.h  ft_string.h  init.h  libft.h  philo.h
philo/src/: algo.c  gettimestamp.c  have_philosopher_eaten.c  is_philo_finished.c  is_philosopher_dead.c  monitor.c  philo_exit.c  philo_init.c  philo_init_mutex.c  philo_parse_args.c  philosopher_die.c  philosopher_eat.c  philosopher_sleep.c  philosopher_think.c  printing.c  set_philo_finished.c
philo/src/ft_string/: ft_itoa.c  ft_strcat.c  ft_strcmp.c  ft_strinsert.c  ft_strremove.c
philo_bonus/: CMakeLists.txt
philo_bonus/include/: defines.h  philo.h
philo_bonus/src/: get_timestamp.c  lock_forks.c  main.c  monitor_and_kill.c  philo_algo.c  philo_die.c  philo_eat.c  philo_exit.c  philo_fork.c  philo_init.c  philo_is_dead.c  philo_parse_args.c  philo_print.c  philo_sleep.c  philo_think.c
src/: algo.c  do.c  ft_putstrfd_mt.c  get_timestamp.c  main.c  main_loop.c  output.c  philo.c  philo_exit.c  philo_init.c  philo_is_finished.c  philo_set_finished.c  philo_start.c  test_is_dead.c
